5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4192/executions/1795_1600.log
== TEST (2019-05-30 16:03:21) 
-- CODE:
nome = andre
print(nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = andre
NameError: name 'andre' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:03:37) 
-- CODE:
nome = 23
print(nome)
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:03:46) 
-- CODE:
nome = andre
print(nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = andre
NameError: name 'andre' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:05:46) 
-- CODE:
idade = 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = andre
NameError: name 'andre' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
